home section style

--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
                     </ul>
                 </nav>
             </header>
+            <div class="intro">
+                <h1>Awesome <span class = "blue">HTML5</span> Template <span class = "yellow">TINKER</span></h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum soluta praesentium explicabo voluptas deleniti aspernatur et laudantium voluptatem, porro itaque ipsam blanditiis? Vero nesciunt neque, magnam vel eius veniam optio!
+                </p>
+                <div class = "lien1">
+                    <a href="">LET'S START</a>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
