services section style

--- a/index.html
+++ b/index.html
@@ -33,6 +33,52 @@
                 </div>
             </div>
         </section>
+        <section class="services">
+            <div class = "service">
+                <div class = "service-icon">
+                    <img src="assets/images/service_icon_01.png" alt="cloche">
+                </div>
+                <h3>Smart Alert Updated</h3>
+                <div class = "white-separator"></div>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium officiis quae sequi iste odit alias quis, repudiandae ut commodi aspernatur repellendus voluptate in esse qui consequuntur. Quidem ea nemo aspernatur.</p>
+                <div class="link1">
+                    <a href="">CONTINUE READING</a>
+                </div>
+            </div>
+            <div class = "service">
+                <div class = "service-icon">
+                    <img src="assets/images/service_icon_02.png" alt="cloche">
+                </div>
+                <h3>Lovely HTML5 layout</h3>
+                <div class = "white-separator"></div>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium officiis quae sequi iste odit alias quis, repudiandae ut commodi aspernatur repellendus voluptate in esse qui consequuntur. Quidem ea nemo aspernatur.</p>
+                <div class="link1">
+                    <a href="">CONTINUE READING</a>
+                </div>
+            </div>
+            <div class = "service">
+                <div class = "service-icon">
+                    <img src="assets/images/service_icon_03.png" alt="cloche">
+                </div>
+                <h3>Always CSS Ready</h3>
+                <div class = "white-separator"></div>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium officiis quae sequi iste odit alias quis, repudiandae ut commodi aspernatur repellendus voluptate in esse qui consequuntur. Quidem ea nemo aspernatur.</p>
+                <div class="link1">
+                    <a href="">CONTINUE READING</a>
+                </div>
+            </div>
+            <div class = "service">
+                <div class = "service-icon">
+                    <img src="assets/images/service_icon_04.png" alt="cloche">
+                </div>
+                <h3>One-Click Intall</h3>
+                <div class = "white-separator"></div>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium officiis quae sequi iste odit alias quis, repudiandae ut commodi aspernatur repellendus voluptate in esse qui consequuntur. Quidem ea nemo aspernatur.</p>
+                <div class="link1">
+                    <a href="">CONTINUE READING</a>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
