section portfolio style

--- a/index.html
+++ b/index.html
@@ -79,6 +79,32 @@
                 </div>
             </div>
         </section>
+        <section class="portfolio">
+            <div class="menu">
+                <h2>Our Gallery</h2>
+                <div class = "white-separator"></div>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                <nav>
+                    <ul>
+                        <li><a href="">Show all</a></li>
+                        <li><a href="">Branding</a></li>
+                        <li><a href="">Graphic</a></li>
+                        <li><a href="">Nature</a></li>
+                        <li><a href="">Animation</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="gallery">
+                <div class="photos">
+                    <div id = "photo1"><img  src="assets/images/portfolio_item_01.jpg" alt=""></div>
+                    <div id = "photo2"><img  src="assets/images/portfolio_item_02.jpg" alt=""></div>
+                    <div id = "photo3"><img  src="assets/images/portfolio_item_03.jpg" alt=""></div>
+                    <div id = "photo4"><img  src="assets/images/portfolio_item_04.jpg" alt=""></div>
+                    <div id = "photo5"><img  src="assets/images/portfolio_item_05.jpg" alt=""></div>
+                    <div id = "photo6"><img  src="assets/images/portfolio_item_06.jpg" alt=""></div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
