section testimonies style

--- a/index.html
+++ b/index.html
@@ -105,6 +105,23 @@
                 </div>
             </div>
         </section>
+        <section class ="testimonies">
+
+            <p class = "quotation">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis consequatur inventore neque quam atque commodi vero necessitatibus repellendus voluptatem possimus porro velit delectus hic explicabo aliquam, blanditiis eligendi deleniti nostrum.
+            </p>
+        
+            <p class="author">Richard Beal</p>
+            <p class="role">CSS Developer</p>
+
+            <div class ="selectors">
+                <div class = "bullet"></div>
+                <div class = "bullet"></div>
+                <div class = "bullet"></div>
+                <div class = "bullet"></div>
+            </div>
+
+        </section>
     </main>
 </body>
 </html>
